--- a/index.html
+++ b/index.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibliothèque</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- Section Livres -->
-    <section id="livres">
-        <h2>Gestion des Livres</h2>
-        <form id="form-livre">
-            <input type="text" id="titre" placeholder="Titre" required>
-            <input type="text" id="auteur" placeholder="Auteur" required>
-            <input type="number" id="quantite" placeholder="Quantité" required>
-            <button type="submit">Ajouter Livre</button>
-        </form>
-        <div id="liste-livres">
-            <!-- Liste des livres -->
-        </div>
-    </section>
+<body class="bg-light">
 
-    <!-- Section Utilisateurs -->
-    <section id="utilisateurs">
-        <h2>Gestion des Utilisateurs</h2>
-        <form id="form-utilisateur">
-            <input type="text" id="nom" placeholder="Nom" required>
-            <input type="prenom" id="prenom" placeholder="Prenom" required>
-            <input type="email" id="email" placeholder="Email" required>
-            <button type="submit">Ajouter Livre</button>
-        </form>
-        <div id="liste-utilisateurs">
-            <!-- Liste des utilisateurs -->
-        </div>
-    </section>
+    <div class="container my-5">
+        <h1 class="text-center mb-5">Gestion de Bibliothèque</h1>
+        <section id="livres" class="mb-5">
+            <h2 class="mb-3">Gestion des Livres</h2>
+            <form id="form-livre" class="row g-3 mb-3">
+                <div class="col-md-4">
+                    <input type="text" id="titre" class="form-control" placeholder="Titre" required>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" id="auteur" class="form-control" placeholder="Auteur" required>
+                </div>
+                <div class="col-md-2">
+                    <input type="number" id="quantite" class="form-control" placeholder="Quantité" required>
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-primary w-100">Ajouter</button>
+                </div>
+            </form>
+            <div id="liste-livres" class="list-group">
+            </div>
+        </section>
 
-    <!-- Section Emprunts -->
-    <section id="emprunts">
-        <h2>Gestion des Emprunts</h2>
-        <form id="form-emprunt">
-            <select id="select-utilisateur"></select>
-            <select id="select-livre"></select>
-            <button type="submit">Emprunter</button>
-        </form>
-        <div id="liste-emprunts">
-            <!-- Liste des emprunts -->
-        </div>
-    </section>
+        <section id="utilisateurs" class="mb-5">
+            <h2 class="mb-3">Gestion des Utilisateurs</h2>
+            <form id="form-utilisateur" class="row g-3 mb-3">
+                <div class="col-md-3">
+                    <input type="text" id="nom" class="form-control" placeholder="Nom" required>
+                </div>
+                <div class="col-md-3">
+                    <input type="text" id="prenom" class="form-control" placeholder="Prénom" required>
+                </div>
+                <div class="col-md-4">
+                    <input type="email" id="email" class="form-control" placeholder="Email" required>
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-success w-100">Ajouter</button>
+                </div>
+            </form>
+            <div id="liste-utilisateurs" class="list-group">
+            </div>
+        </section>
 
+        <section id="emprunts" class="mb-5">
+            <h2 class="mb-3">Gestion des Emprunts</h2>
+            <form id="form-emprunt" class="row g-3 mb-3">
+                <div class="col-md-5">
+                    <select id="select-utilisateur" class="form-select"></select>
+                </div>
+                <div class="col-md-5">
+                    <select id="select-livre" class="form-select"></select>
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-warning w-100">Emprunter</button>
+                </div>
+            </form>
+            <div id="liste-emprunts" class="list-group">
+            </div>
+        </section>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
