--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
                 
 <div class="col-12 col-md-2">
-    <button type="submit" class="btn btn-primary w-100">Ajouter</button>
+    <button type="submit" class="btn btn-secondary w-100">Ajouter</button>
 </div>
 </form>
             
@@ -47,7 +47,7 @@
             <input type="email" id="email" class="form-control" placeholder="Email" required>
         </div>
         <div class="col-12 col-md-2">
-            <button type="submit" class="btn btn-success w-100">Ajouter</button>
+            <button type="submit" class="btn btn-secondary w-100">Ajouter</button>
         </div>
     </form>
     <div id="liste-utilisateurs" class="list-group"></div>
@@ -63,7 +63,7 @@
             <select id="select-livre" class="form-select"></select>
         </div>
         <div class="col-12 col-md-2">
-            <button type="submit" class="btn btn-warning w-100">Emprunter</button>
+            <button type="submit" class="btn btn-secondary w-100">Emprunter</button>
         </div>
     </form>
     <div id="liste-emprunts" class="list-group"></div>
